--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,4 +1,10 @@
-<div class="row justify-content-center">
+<% /*
+ * File: dashboard.ejs
+ * Author: Gunpreet Singh
+ * Student ID: 9022194
+ * Purpose: Renders the dashboard page (possibly a homepage or user overview).
+ */ %>
+ <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="card">
         <div class="card-body text-center py-5">
