--- a/views/layout/main.ejs
+++ b/views/layout/main.ejs
@@ -1,3 +1,9 @@
+<% /*
+ * File: main.ejs
+ * Author: Gunpreet Singh
+ * Student ID: 9022194
+ * Purpose: Main layout template providing navigation and structure for all pages.
+ */ %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
