--- a/views/appointment.ejs
+++ b/views/appointment.ejs
@@ -1,4 +1,10 @@
-<% if (message) { %>
+<% /*
+ * File: appointment.ejs
+ * Author: Gunpreet Singh
+ * Student ID: 9022194
+ * Purpose: Renders the admin page for managing appointment time slots.
+ */ %>
+ <% if (message) { %>
     <div class="alert <%= message.includes('Error') ? 'alert-danger' : 'alert-success' %> alert-dismissible fade show">
       <%= message %>
       <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
