--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,4 +1,10 @@
-<div class="container text-center mt-5">
+<% /*
+ * File: error.ejs
+ * Author: Gunpreet Singh
+ * Student ID: 9022194
+ * Purpose: Renders a generic error page for server or access errors.
+ */ %>
+ <div class="container text-center mt-5">
     <h1 class="display-1 text-danger"><%= title %></h1>
     <h2><%= message %></h2>
     <p class="text-muted">You do not have permission to access this page.</p>
