--- a/views/examiner.ejs
+++ b/views/examiner.ejs
@@ -1,4 +1,9 @@
-
+<% /*
+ * File: examiner.ejs
+ * Author: Gunpreet Singh
+ * Student ID: 9022194
+ * Purpose: Renders the examiner dashboard for managing driver appointments and test evaluations.
+ */ %>
 <% if (message) { %>
   <div class="alert <%= message.includes('Error') ? 'alert-danger' : 'alert-success' %> alert-dismissible fade show">
     <%= message %>
