--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,10 @@
-<% if (message) { %>
+<% /*
+ * File: login.ejs
+ * Author: Gunpreet Singh
+ * Student ID: 9022194
+ * Purpose: Renders the login and signup forms for user authentication.
+ */ %>
+ <% if (message) { %>
   <div class="alert <%= message.includes('Error') ? 'alert-danger' : 'alert-success' %> alert-dismissible fade show">
     <%= message %>
     <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
